force-app/main/default/objects/LT_Manifest__c/LT_Manifest__c.object-meta.xml
<CustomObject>
    <description>Romaneio - LogiTrack Operations 360.</description>
    <label>Romaneio</label>
    <nameField>
        <displayFormat>RMN-{000000}</displayFormat>
        <label>Numero do Romaneio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Romaneios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>