force-app/main/default/objects/LT_Manifest__c/fields/LT_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Approved_By__c</fullName>
    <description>Usuario que aprovou o romaneio para pagamento.</description>
    <label>Aprovado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Romaneios Aprovados</relationshipLabel>
    <relationshipName>LT_Approved_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>