force-app/main/default/objects/LT_Manifest__c/fields/LT_Bonus_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>LT_Bonus_Adjustment__c</fullName>
    <description>Bonus ou ajuste manual sobre o valor bruto.</description>
    <label>Bonus / Ajuste</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>