force-app/main/default/objects/LT_Manifest__c/fields/LT_Driver_Category__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Category__c</fullName>
    <description>Categoria do motorista do romaneio (deve pagar por Romaneio).</description>
    <label>Categoria do Motorista</label>
    <formula>LT_Driver__r.LT_Category_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>