force-app/main/default/objects/LT_Manifest__c/fields/LT_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Gross_Amount__c</fullName>
    <description>Total de Pacotes x Valor por Pacote.</description>
    <label>Valor Bruto</label>
    <formula>BLANKVALUE(LT_Total_Packages__c, 0) * BLANKVALUE(LT_Rate_Per_Package__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>