force-app/main/default/objects/LT_Manifest__c/fields/LT_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Line_Count__c</fullName>
    <description>Quantidade de linhas do romaneio.</description>
    <label>Qtd. de Linhas</label>
    <summaryForeignKey>LT_Manifest_Line__c.LT_Manifest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>