force-app/main/default/objects/LT_Manifest__c/fields/LT_Manifest_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Manifest_Type__c</fullName>
    <description>Coleta First Mile ou Mini Transferencia.</description>
    <label>Tipo de Romaneio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta (First Mile)</fullName>
                <default>true</default>
                <label>Coleta (First Mile)</label>
            </value>
            <value>
                <fullName>Mini Transferencia (MR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>