force-app/main/default/objects/LT_Manifest__c/fields/LT_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Net_Amount__c</fullName>
    <description>Valor Bruto + Bonus / Ajuste.</description>
    <label>Valor Liquido</label>
    <formula>LT_Gross_Amount__c + BLANKVALUE(LT_Bonus_Adjustment__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>