force-app/main/default/objects/LT_Manifest__c/fields/LT_Origin_Unit__c.field-meta.xml
<CustomField>
    <fullName>LT_Origin_Unit__c</fullName>
    <description>Base ou CD de origem do romaneio.</description>
    <label>Unidade de Origem</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Romaneios de Origem</relationshipLabel>
    <relationshipName>LT_Origin_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>