force-app/main/default/objects/LT_Manifest__c/fields/LT_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Date__c</fullName>
    <description>Data em que o romaneio foi pago.</description>
    <label>Data do Pagamento</label>
    <type>Date</type>
</CustomField>