force-app/main/default/objects/LT_Manifest__c/fields/LT_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Payment_Status__c</fullName>
    <description>Etapa de conferencia e pagamento do romaneio.</description>
    <label>Status do Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Conferencia</fullName>
                <default>true</default>
                <label>Em Conferencia</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>