force-app/main/default/objects/LT_Manifest__c/fields/LT_Rate_Per_Package__c.field-meta.xml
<CustomField>
    <fullName>LT_Rate_Per_Package__c</fullName>
    <description>Valor pago ao motorista por pacote coletado/transferido.</description>
    <label>Valor por Pacote</label>
    <required>true</required>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>