force-app/main/default/objects/LT_Manifest__c/fields/LT_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Reference_Date__c</fullName>
    <description>Dia de trabalho a que o romaneio se refere.</description>
    <label>Data de Referencia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>