force-app/main/default/objects/LT_Manifest__c/fields/LT_Total_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Total_Packages__c</fullName>
    <description>Soma dos pacotes das linhas do romaneio.</description>
    <label>Total de Pacotes</label>
    <summarizedField>LT_Manifest_Line__c.LT_Package_Count__c</summarizedField>
    <summaryForeignKey>LT_Manifest_Line__c.LT_Manifest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>