force-app/main/default/objects/LT_Manifest__c/validationRules/LT_Manifest_Approved_Requires_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Manifest_Approved_Requires_Approver</fullName>
    <active>true</active>
    <description>Romaneio aprovado ou pago exige o aprovador.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(LT_Payment_Status__c, "Aprovado"), ISPICKVAL(LT_Payment_Status__c, "Pago")), ISBLANK(LT_Approved_By__c))</errorConditionFormula>
    <errorDisplayField>LT_Approved_By__c</errorDisplayField>
    <errorMessage>Informe quem aprovou o romaneio.</errorMessage>
</ValidationRule>