force-app/main/default/objects/LT_Manifest__c/validationRules/LT_Manifest_Driver_Pay_Model.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Manifest_Driver_Pay_Model</fullName>
    <active>true</active>
    <description>O motorista do romaneio precisa ser pago por Romaneio (Coleta ou MR).</description>
    <errorConditionFormula>NOT(CONTAINS(LT_Driver__r.LT_Payment_Model__c, "Romaneio"))</errorConditionFormula>
    <errorDisplayField>LT_Driver__c</errorDisplayField>
    <errorMessage>Romaneios so podem ser emitidos para motoristas das categorias Coleta ou Mini Transferencia.</errorMessage>
</ValidationRule>