force-app/main/default/objects/LT_Manifest__c/validationRules/LT_Manifest_MR_Requires_Destination.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Manifest_MR_Requires_Destination</fullName>
    <active>true</active>
    <description>Mini Transferencia exige unidade de destino.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Manifest_Type__c, "Mini Transferencia (MR)"), ISBLANK(LT_Destination_Unit__c))</errorConditionFormula>
    <errorDisplayField>LT_Destination_Unit__c</errorDisplayField>
    <errorMessage>Informe a Unidade de Destino da mini transferencia.</errorMessage>
</ValidationRule>