force-app/main/default/objects/LT_Manifest__c/validationRules/LT_Manifest_Paid_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Manifest_Paid_Requires_Date</fullName>
    <active>true</active>
    <description>Romaneio pago exige a data do pagamento.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Payment_Status__c, "Pago"), ISBLANK(LT_Payment_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Payment_Date__c</errorDisplayField>
    <errorMessage>Informe a Data do Pagamento.</errorMessage>
</ValidationRule>