force-app/main/default/objects/LT_Manifest__c/validationRules/LT_Manifest_Rate_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Manifest_Rate_Positive</fullName>
    <active>true</active>
    <description>O valor por pacote deve ser maior que zero.</description>
    <errorConditionFormula>LT_Rate_Per_Package__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Rate_Per_Package__c</errorDisplayField>
    <errorMessage>Informe um Valor por Pacote maior que zero.</errorMessage>
</ValidationRule>