force-app/main/default/objects/LT_Manifest__c/listViews/A_Pagar.listView-meta.xml
<ListView>
    <fullName>A_Pagar</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Manifest_Type__c</columns>
    <columns>LT_Reference_Date__c</columns>
    <columns>LT_Net_Amount__c</columns>
    <columns>LT_Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </filters>
    <label>Romaneios a Pagar</label>
</ListView>