force-app/main/default/objects/LT_Manifest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Manifest_Type__c</columns>
    <columns>LT_Reference_Date__c</columns>
    <columns>LT_Total_Packages__c</columns>
    <columns>LT_Net_Amount__c</columns>
    <columns>LT_Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>